@@ -2119,7 +2119,7 @@ synchronized作用：
 - `java.util.concurrent.locks.ReentrantLock#tryLock(long, java.util.concurrent.TimeUnit)`
 - `java.util.concurrent.locks.ReentrantLock#unlock`：释放锁
 
-重入锁完全可以替代synchronized关键字，jdk5的早期版本中重入锁性能好于synchronized，但从jdk6开始，synchronized的性能得到优化，是的两者性能相差不大
+重入锁完全可以替代Synchronized关键字，jdk5的早期版本中重入锁性能好于synchronized，但从jdk6开始，synchronized的性能得到优化，是的两者性能相差不大
 
 ```java
 package com.concurrent;
@@ -2346,7 +2346,7 @@ jstack结果：
         at java.lang.Thread.run(Thread.java:748)
 ```
 
-> 使用synchronized实现的锁，t2线程中断后，没有一个线程会停止，而都是在阻塞中
+> 使用synchronized实现的锁，t2线程中断后，没有一个线程会停止，而都是在阻塞中，因为t1线程并未释放Synchronized锁
 
 ##### 锁申请等待限时
 
@@ -4561,8 +4561,6 @@ ArrayList和Vector都是线程安全的数据实现，但Vector是线程安全�
 
 
 
-
-
 # 锁的优化及注意事项
 
 ## 提高锁性能的几点建议
@@ -5445,20 +5443,155 @@ public class CombineCompletableFuture {
 
 
 
-# `synchronized`实现原理
-
-- 偏向锁
-  - JVM相关参数（jdk6、7）：默认是启用的，但是应用程序启动几秒后才激活
-    - `-XX:BiasedLockingStartupDelay=0` ：关闭延迟
-    - `-XX:-UseBiasedLocking=false`：关闭偏向锁，程序默认会进入轻量级锁状态
-- 轻量级锁
-- 重量级锁
 
 
+# JDK并发包锁实现原理
 
-## 
+## AbstractQueuedSynchronizer队列同步器
 
+队列同步器通过维护一个由双向链表组成的队列维护对某个获取锁的线程的集合。
 
+节点数据结构
+
+```java
+static final class Node {
+        /** Marker to indicate a node is waiting in shared mode */
+        static final Node SHARED = new Node();
+        /** Marker to indicate a node is waiting in exclusive mode */
+        static final Node EXCLUSIVE = null;
+
+        /** waitStatus value to indicate thread has cancelled */
+        static final int CANCELLED =  1;
+        /** waitStatus value to indicate successor's thread needs unparking */
+        static final int SIGNAL    = -1;
+        /** waitStatus value to indicate thread is waiting on condition */
+        static final int CONDITION = -2;
+        /**
+         * waitStatus value to indicate the next acquireShared should
+         * unconditionally propagate
+         */
+        static final int PROPAGATE = -3;
+
+        /**
+         * Status field, taking on only the values:
+         *   SIGNAL:     The successor of this node is (or will soon be)
+         *               blocked (via park), so the current node must
+         *               unpark its successor when it releases or
+         *               cancels. To avoid races, acquire methods must
+         *               first indicate they need a signal,
+         *               then retry the atomic acquire, and then,
+         *               on failure, block.
+         *   CANCELLED:  This node is cancelled due to timeout or interrupt.
+         *               Nodes never leave this state. In particular,
+         *               a thread with cancelled node never again blocks.
+         *   CONDITION:  This node is currently on a condition queue.
+         *               It will not be used as a sync queue node
+         *               until transferred, at which time the status
+         *               will be set to 0. (Use of this value here has
+         *               nothing to do with the other uses of the
+         *               field, but simplifies mechanics.)
+         *   PROPAGATE:  A releaseShared should be propagated to other
+         *               nodes. This is set (for head node only) in
+         *               doReleaseShared to ensure propagation
+         *               continues, even if other operations have
+         *               since intervened.
+         *   0:          None of the above
+         *
+         * The values are arranged numerically to simplify use.
+         * Non-negative values mean that a node doesn't need to
+         * signal. So, most code doesn't need to check for particular
+         * values, just for sign.
+         *
+         * The field is initialized to 0 for normal sync nodes, and
+         * CONDITION for condition nodes.  It is modified using CAS
+         * (or when possible, unconditional volatile writes).
+         */
+        volatile int waitStatus;
+
+        /**
+         * Link to predecessor node that current node/thread relies on
+         * for checking waitStatus. Assigned during enqueuing, and nulled
+         * out (for sake of GC) only upon dequeuing.  Also, upon
+         * cancellation of a predecessor, we short-circuit while
+         * finding a non-cancelled one, which will always exist
+         * because the head node is never cancelled: A node becomes
+         * head only as a result of successful acquire. A
+         * cancelled thread never succeeds in acquiring, and a thread only
+         * cancels itself, not any other node.
+         */
+        volatile Node prev;
+
+        /**
+         * Link to the successor node that the current node/thread
+         * unparks upon release. Assigned during enqueuing, adjusted
+         * when bypassing cancelled predecessors, and nulled out (for
+         * sake of GC) when dequeued.  The enq operation does not
+         * assign next field of a predecessor until after attachment,
+         * so seeing a null next field does not necessarily mean that
+         * node is at end of queue. However, if a next field appears
+         * to be null, we can scan prev's from the tail to
+         * double-check.  The next field of cancelled nodes is set to
+         * point to the node itself instead of null, to make life
+         * easier for isOnSyncQueue.
+         */
+        volatile Node next;
+
+        /**
+         * The thread that enqueued this node.  Initialized on
+         * construction and nulled out after use.
+         */
+        volatile Thread thread;
+
+        /**
+         * Link to next node waiting on condition, or the special
+         * value SHARED.  Because condition queues are accessed only
+         * when holding in exclusive mode, we just need a simple
+         * linked queue to hold nodes while they are waiting on
+         * conditions. They are then transferred to the queue to
+         * re-acquire. And because conditions can only be exclusive,
+         * we save a field by using special value to indicate shared
+         * mode.
+         */
+        Node nextWaiter;
+
+        /**
+         * Returns true if node is waiting in shared mode.
+         */
+        final boolean isShared() {
+            return nextWaiter == SHARED;
+        }
+
+        /**
+         * Returns previous node, or throws NullPointerException if null.
+         * Use when predecessor cannot be null.  The null check could
+         * be elided, but is present to help the VM.
+         *
+         * @return the predecessor of this node
+         */
+        final Node predecessor() throws NullPointerException {
+            Node p = prev;
+            if (p == null)
+                throw new NullPointerException();
+            else
+                return p;
+        }
+
+        Node() {    // Used to establish initial head or SHARED marker
+        }
+
+        Node(Thread thread, Node mode) {     // Used by addWaiter
+            this.nextWaiter = mode;
+            this.thread = thread;
+        }
+
+        Node(Thread thread, int waitStatus) { // Used by Condition
+            this.waitStatus = waitStatus;
+            this.thread = thread;
+        }
+    }
+```
+
+![image-20210414171856387](java多线程.assets/image-20210414171856387.png)
 
 
 
